# quickjs-cmake

./: CMakeLists.txt  LICENSE
quickjs/: cutils.c  cutils.h  dirent-windows.h  libregexp.c  msvc-defs.h  quickjs-defs.h  quickjs-libc.c  quickjs.c  quickjs.h
test/: main.cc
